<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">My Application</string>
    <string name="title_search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_plan">Plan</string>
    <string name="title_add_plant">AddPlant</string>
    <string name="plantName">식물 이름</string>
    <string name="plantTip">식물 팁</string>
    <string name="add_to_my_plant">내 식물로 등록하기</string>
    <string name="purify_best_five">공기정화 식물 BEST 5</string>
    <string name="herb_best_five">허브 식물 BEST 5</string>

    <!-- 추천 페이지 -->
    <string name="btn_recommend">나한테 꼭 맞는 식물 추천 받으러 가기!</string>
    <string name="plant_name">식물 이름</string>
    <string name="searchResult">검색 결과</string>
    <string name="recommendText">내 상황에 딱 맞는 식물을 추천 받아보세요!\n</string>

    <string name="condition1">식물을 키우는 용도는 무엇인가요?</string>
    <string name="condition1_1">공기정화용</string>
    <string name="condition1_2">관상용</string>
    <string name="condition1_3">식용</string>
    <string name="condition1_4">선택 안 함</string>

    <string name="condition2">식물 크기는?</string>
    <string name="condition2_1">소형</string>
    <string name="condition2_2">중형</string>
    <string name="condition2_3">대형</string>
    <string name="condition2_4">선택 안 함</string>

    <string name="condition3">개화 시기는?</string>
    <string name="condition3_1">봄</string>
    <string name="condition3_2">여름</string>
    <string name="condition3_3">가을</string>
    <string name="condition3_4">겨울</string>
    <string name="condition3_5">선택 안 함</string>

    <string name="condition4">난이도</string>
    <string name="condition4_1">쉬움</string>
    <string name="condition4_2">보통</string>
    <string name="condition4_3">어려움</string>
    <string name="condition4_4">선택 안 함</string>

    <string name="condition6">햇빛</string>
    <string name="condition6_1">음지</string>
    <string name="condition6_2">반음지</string>
    <string name="condition6_3">양지</string>
    <string name="condition6_4">선택 안 함</string>

    <string name="btn_getResult">결과 보기</string>
    <string name="filteringCondition">최종조건</string>

    <!-- 결과 페이지 -->
    <string name="announcementText">설정하신 조건에 맞는 식물 목록이에요!</string>

    <!-- 달력 관련 -->
    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>


    <!-- fragment_home -->
    <string name="location_button">위치 보기</string>
    <string name="location_text">위치</string>
    <string name="weather_text">날씨</string>
    <string name="initial_text">아직 식물을 등록하지 않으셨나요?\n식물을 등록해보세요!</string>

    <!-- button -->
    <string name="feature_button">FEATURE</string>
    <string name="detail_button">DETAIL</string>
    <string name="complete_button">완&#160;&#160;료</string>
    <string name="cancel_button">취&#160;&#160;소</string>
    <string name="update_button">수&#160;&#160;정</string>
    <string name="delete_button">삭&#160;&#160;제</string>

    <!-- fragment_edit -->
    <string name="hint">00</string>

    <!-- fragment_feature -->
    <string name="list_button">목록으로 돌아가기</string>

    <!-- fragment_detail -->
    <string name="water_text">물 주기&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;일&#160;마다</string>
    <string name="sun_text">햇빛 주기&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;일&#160;마다</string>
    <string name="split_text">분갈이 주기&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;일&#160;마다</string>
</resources>
