<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_recommend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">

        <ImageButton
            android:id="@+id/btn_goSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="72dp"
            android:background="#00ff0000"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recommendText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:textSize="18sp"
            android:textColor="#64A68A"
            android:textStyle="bold"
            android:text="@string/recommendText" />
    </LinearLayout>

    <TextView
        android:id="@+id/condition1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/condition1" />

    <RadioGroup
        android:id="@+id/group1"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/condition1_1"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition1_1" />

        <RadioButton
            android:id="@+id/condition1_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition1_2" />

        <RadioButton
            android:id="@+id/condition1_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition1_3" />

        <RadioButton
            android:id="@+id/condition1_4"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition1_4" />
    </RadioGroup>

    <TextView
        android:id="@+id/condition2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/condition2" />

    <RadioGroup
        android:id="@+id/group2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/condition2_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition2_1" />

        <RadioButton
            android:id="@+id/condition2_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition2_2" />

        <RadioButton
            android:id="@+id/condition2_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition2_3" />

        <RadioButton
            android:id="@+id/condition2_4"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition2_4" />
    </RadioGroup>

    <TextView
        android:id="@+id/condition3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/condition3" />

    <RadioGroup
        android:id="@+id/group3"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/condition3_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition3_1" />

        <RadioButton
            android:id="@+id/condition3_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition3_2" />

        <RadioButton
            android:id="@+id/condition3_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition3_3" />

        <RadioButton
            android:id="@+id/condition3_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition3_4" />

        <RadioButton
            android:id="@+id/condition3_5"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition3_5" />
    </RadioGroup>

    <TextView
        android:id="@+id/condition4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/condition4" />

    <RadioGroup
        android:id="@+id/group4"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/condition4_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition4_1" />

        <RadioButton
            android:id="@+id/condition4_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition4_2" />

        <RadioButton
            android:id="@+id/condition4_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition4_3" />

        <RadioButton
            android:id="@+id/condition4_4"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition4_4" />
    </RadioGroup>

    <TextView
        android:id="@+id/condition6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/condition6" />

    <RadioGroup
        android:id="@+id/group6"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/condition6_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition6_1" />

        <RadioButton
            android:id="@+id/condition6_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition6_2" />

        <RadioButton
            android:id="@+id/condition6_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition6_3" />

        <RadioButton
            android:id="@+id/condition6_4"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/condition6_4" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_getResult"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/main_button_style"
        android:text="@string/btn_getResult" />

</LinearLayout>