<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/btn_location"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginStart="102dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/main_button_style"
        android:gravity="center"
        android:text="@string/location_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:gravity="center"
        android:text="@string/location_text" />

    <TextView
        android:id="@+id/weatherText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:gravity="center"
        android:text="@string/weather_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <ImageButton
        android:id="@+id/add_plant_button"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="@android:color/transparent"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:tint="@color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,UseAppTint"  />

</RelativeLayout>