<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/plant_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="360dp"
                    android:scaleType="fitXY" />

                <ImageButton
                    android:id="@+id/btn_goSearch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            </FrameLayout>

            <TextView
                android:id="@+id/plant_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/plantName"
                android:textColor="@color/purple_200"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plant_detail_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:background="@drawable/btn_search_round"
                android:text="@string/plantTip"
                android:textColor="@color/purple_200"
                android:lineSpacingExtra="5dp"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/button_add_to_my_plant"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_search_round"
                android:backgroundTint="#d3d3d3"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/add_to_my_plant"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>