<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="50dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="80dp"
        android:layout_marginTop="70dp">

        <ImageView
            android:id="@+id/addPhoto_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="5dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/plantText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginTop="38dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="식물명 : " />

    <TextView
        android:id="@+id/nicknameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/plantText"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="애칭 : " />

    <TextView
        android:id="@+id/plant_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_toRightOf="@id/plantText"
        android:layout_marginTop="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:ems="10"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/plant_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/plantText"
        android:layout_toRightOf="@id/nicknameText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:textSize="18sp"
        android:ems="10"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/alarm_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/nicknameText">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/water_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/water_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water_text"
                android:textSize="18sp"
                android:paddingStart="30dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/water_text"
                android:layout_width="40dp"
                android:layout_height="23dp"
                android:background="@drawable/white_edittext"
                android:hint="@string/hint"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="90dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/sun_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/sun_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sun_text"
                android:textSize="18sp"
                android:paddingStart="30dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"  />

            <TextView
                android:id="@+id/sun_text"
                android:layout_width="40dp"
                android:layout_height="23dp"
                android:background="@drawable/white_edittext"
                android:hint="@string/hint"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_marginStart="106dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/split_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/split_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/split_text"
                android:textSize="18sp"
                android:paddingStart="30dp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"  />

            <TextView
                android:id="@+id/split_text"
                android:layout_width="40dp"
                android:layout_height="23dp"
                android:background="@drawable/white_edittext"
                android:hint="@string/hint"
                android:textSize="18sp"
                android:textAlignment="center"
                android:paddingBottom="2dp"
                android:layout_marginStart="125dp"/>

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_setting"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toEditBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/green"
            android:text="@string/update_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/toDeleteBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/delete_button"
            android:textColor="#64A68A"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>